<resources>
    <string name="app_name">AndroidBasics</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_birth_date">Enter Your Birth Date</string>
    <string name="enter_your_country">Enter Your Country</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="upload_data">Upload Data</string>
    <string name="counter_app">Counter App</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="welcome_to_splash_screen">Welcome to Splash Screen</string>
</resources>